k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-deployment
  template:
    metadata:
      labels:
        app: web-deployment
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:latest
          livenessProbe:
            httpGet:
              path: /
              port: 80
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
