k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
